--- a/src/css/buttons.css
+++ b/src/css/buttons.css
@@ -1,5 +1,5 @@
 .btn {
-	@apply items-center rounded-md px-4 py-2 shadow-sm hover:brightness-125 focus:outline-none m-1 focus:ring-2 focus:ring-offset-2;
+	@apply m-1 select-none items-center rounded-md px-4 py-2 shadow-sm hover:brightness-125 focus:outline-none focus:ring-2 focus:ring-offset-2;
 }
 
 .btn-primary {
